--- a/backend/package.json
+++ b/backend/package.json
@@ -8,14 +8,15 @@
     "dev": "nodemon src/index.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "typeorm": "^0.3.17",
-    "mssql": "^9.1.1",
-    "cors": "^2.8.5",
+    "axios": "^1.11.0",
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "mssql": "^9.1.1",
+    "typeorm": "^0.3.17",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
   }
-} 
+}
