--- a/instance-dashboard/package.json
+++ b/instance-dashboard/package.json
@@ -1,5 +1,6 @@
 {
   "name": "instance-dashboard",
+  "homepage": "/dashboard",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -13,13 +14,15 @@
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.7.1",
     "react-scripts": "5.0.1",
+    "serve": "^14.2.1",
     "web-vitals": "^5.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "serve": "serve -s build -l 4002"
   },
   "eslintConfig": {
     "extends": [
