เพิ่มการจัดการ location

--- a/instance-dashboard/package.json
+++ b/instance-dashboard/package.json
@@ -1,6 +1,6 @@
 {
   "name": "instance-dashboard",
-  "homepage": "/dashboard",
+  "homepage": "https://whs.zubbsteel.com/dashboard",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
