--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "mssql": "^9.1.1",
+    "node-cron": "^3.0.3",
     "typeorm": "^0.3.17",
     "xlsx": "^0.18.5"
   },
